k8_backup/istio/ingress/lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mylb-service
spec:
  type: LoadBalancer
  selector:
    app: my_gateway
  ports:
  # Default port used by the image
  - port: 80
