k8_backup/istio/ingress/reactgateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: react-gateway
  labels:
    app: my_gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "hexagear.com"
#    port: 80
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
#        from: Same
        from: All
---

# https://gateway-api.f5se.io/guides/allowedroutes/#gateway-and-route-attachment-spec-allowedroute
#My attempt for going to different namespace router has failed till now. So All has no effect.
